[gd_scene load_steps=13 format=2]

[ext_resource path="res://media/hud/twolifeber.png" type="Texture" id=1]
[ext_resource path="res://media/hud/onelifeber.png" type="Texture" id=2]
[ext_resource path="res://media/fonts/score-fonts.fnt" type="BitmapFont" id=3]
[ext_resource path="res://media/fonts/counter-fonts.fnt" type="BitmapFont" id=4]
[ext_resource path="res://media/fonts/extra-fonts.fnt" type="BitmapFont" id=5]
[ext_resource path="res://media/fonts/calcu-fonts.fnt" type="BitmapFont" id=6]
[ext_resource path="res://entities/HUD.gd" type="Script" id=7]
[ext_resource path="res://media/hud/rader.png" type="Texture" id=8]
[ext_resource path="res://media/hud/oneplayer.png" type="Texture" id=9]
[ext_resource path="res://media/hud/twoplayer.png" type="Texture" id=10]
[ext_resource path="res://media/hud/extender.png" type="Texture" id=11]
[ext_resource path="res://media/hud/border.png" type="Texture" id=12]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="LBorder" type="Sprite" parent="."]
position = Vector2( 0, 422 )
z_as_relative = false
texture = ExtResource( 12 )
centered = false

[node name="Extender" type="Sprite" parent="LBorder"]
position = Vector2( 6, 0 )
z_as_relative = false
texture = ExtResource( 11 )
centered = false

[node name="RBorder" type="Sprite" parent="LBorder"]
position = Vector2( 497, 0 )
rotation = 3.14159
scale = Vector2( 1, -1 )
z_as_relative = false
texture = ExtResource( 12 )
centered = false

[node name="Radar" type="Sprite" parent="LBorder"]
position = Vector2( 192, 0 )
z_as_relative = false
texture = ExtResource( 8 )
centered = false

[node name="Player2" type="Sprite" parent="LBorder"]
position = Vector2( 306, 0 )
z_as_relative = false
texture = ExtResource( 10 )
centered = false
hframes = 2

[node name="Life2" type="TextureProgress" parent="LBorder/Player2"]
visible = false
margin_left = 12.0
margin_top = 17.0
margin_right = 172.0
margin_bottom = 57.0
value = 100.0
texture_progress = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Men2" type="Label" parent="LBorder/Player2"]
visible = false
margin_left = 158.0
margin_top = 4.0
margin_right = 172.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "64"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score2" type="Label" parent="LBorder/Player2"]
visible = false
margin_left = 35.0
margin_top = 25.0
margin_right = 173.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0, 1, 1 )
text = "1.000.000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Extra2" type="Label" parent="LBorder/Player2"]
visible = false
margin_left = 36.0
margin_top = 40.0
margin_right = 172.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "     extra - 100.000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammo2" type="Label" parent="LBorder/Player2"]
visible = false
margin_left = 20.0
margin_top = 30.0
margin_right = 60.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "99
99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="Sprite" parent="LBorder"]
position = Vector2( 7, 0 )
z_as_relative = false
texture = ExtResource( 9 )
centered = false
hframes = 2
frame = 1

[node name="Life1" type="TextureProgress" parent="LBorder/Player1"]
margin_left = 12.0
margin_top = 17.0
margin_right = 172.0
margin_bottom = 57.0
value = 100.0
texture_progress = ExtResource( 2 )
fill_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Men1" type="Label" parent="LBorder/Player1"]
margin_left = 158.0
margin_top = 4.0
margin_right = 172.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "64"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score1" type="Label" parent="LBorder/Player1"]
margin_left = 11.0
margin_top = 25.0
margin_right = 149.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0, 1, 1 )
text = "1.000.000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Extra1" type="Label" parent="LBorder/Player1"]
margin_left = 12.0
margin_top = 40.0
margin_right = 148.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "     extra - 100.000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammo1" type="Label" parent="LBorder/Player1"]
margin_left = 168.0
margin_top = 30.0
margin_right = 208.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "99
99"
__meta__ = {
"_edit_use_anchors_": false
}
